--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
                 "img",
                 "details", "summary", "blockquote", "cite",
             ]
-        }
+        },
+        "MD059": false
     }
 }
