--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ OmniCentro/Data
 OmniCentro/Sxangxonoto/Sxangxonoto.md
 privata/
 roluloj/
+radio/kantlisto
 
 
 # Byte-compiled / optimized / DLL files
