Update markdown linting rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
         "MD028": false,
         "MD033": {
             "allowed_elements": [
-                "br", "span", "p", "a", "b", "em",
+                "br", "span", "p", "a", "b", "em", "s",
                 "ul", "li",
                 "img",
                 "details", "summary", "blockquote", "cite",
