Add quote; Minor Edits

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,11 +9,11 @@
 *.json  text
 *.md    text
 *.html  text
+*.coc   text
+*.coc.cid   text
 
 # Declare files that will always have CRLF line endings on checkout.
 *.sln   text eol=crlf
-*.coc   text eol=crlf
-*.coc.cid   text eol=crlf
 
 # Denote all files that are truly binary and should not be modified.
 *.png   binary
