--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-numpy == 2.0.2
-astropy == 6.1.3
-matplotlib == 3.9.1
-tinytag == 2.0.0
-healpy == 1.17.3
+astropy == 7.1.0
+gdal == 3.11.3
+healpy == 1.18.1
+numpy == 2.2.6
+matplotlib == 3.10.6
+svg.py == 1.9.1
+tinytag == 2.1.2
