Edit Emblemo: allow converting to png/jpg files within code

--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,8 @@ temp.*
 CSL2_SavesDir
 OmniCentro/Data
 OmniCentro/Swangwonoto/Swangwonoto.md
-fig/RdOFlago.x5y3.svg
+fig/*.jpg
+fig/RdOFlago.*.svg
 privata/
 roluloj/
 
