--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
                 "details", "summary", "blockquote", "cite",
             ]
         },
-        "MD059": false
+        "MD059": false,
+        "MD060": false
     }
 }
