--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ CSL2_SavesDir
 Aiosa.md
 Aiosa/
 OmniCentro/Data
-OmniCentro/Sxangxonoto/Sxangxonoto.md
+*/Sxangxonoto/Sxangxonoto.md
 fig/*.jpg
 fig/RdOFlago.*.svg
 privata/
